--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
 <app-image-slider
     [sliders]="imageSliders"
 ></app-image-slider>
-<app-horizontal-grid></app-horizontal-grid>
+<app-horizontal-grid [channels]="channelsData"></app-horizontal-grid>
