--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<app-scrollable-tab 
-    [bgColor]="'brown'" 
-    [menus]="tabs"
-    (tabSelected)="onSelect($event)"
-    >
-</app-scrollable-tab>
-<app-image-slider
-    [sliders]="imageSliders"
-></app-image-slider>
-<app-horizontal-grid [channels]="channelsData"></app-horizontal-grid>
+<router-outlet></router-outlet>
