--- a/src/app/shared/components/horizontal-grid/horizontal-grid.component.html
+++ b/src/app/shared/components/horizontal-grid/horizontal-grid.component.html
@@ -1,4 +1,13 @@
-<div appGridItem *ngFor="let channel of channels">
-    <img [appGridItemImage]="'3rem'" [src]="channel.url"/>
-    <span GridItemTitleDirective >{{channel.title}}</span>
+<div
+  class="container"
+  [ngStyle]="{
+    'grid-template-rows': templateRows,
+    'grid-template-columns': templateColumns
+  }"
+  (scroll)="handleScroll($event)"
+>
+  <ng-content select="[appGridItem]"></ng-content>
+</div>
+<div class="underline" *ngIf="scrollable">
+  <div class="highlight" [ngStyle]="{ margin: sliderMargin }"></div>
 </div>
