--- a/src/app/shared/components/scrollable-tab/scrollable-tab.component.html
+++ b/src/app/shared/components/scrollable-tab/scrollable-tab.component.html
@@ -1,6 +1,6 @@
 <ul>
     <li *ngFor="let menu of menus;let i = index">
-        <a [class.active]="i === activeIndex" (click)="handleSelection(i)" href="#">{{menu.title}}</a>
+        <a [class.active]="i === activeIndex" (click)="handleSelection(i)">{{menu.title}}</a>
         <span class="indicator" *ngIf="i === activeIndex" [ngStyle]="{'backgroundColor':bgColor}"></span>
     </li>
 </ul>
